--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "SQON creation and manipulation library.",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rm -rf dist && mkdir dist && NODE_PATH=./ tsc"
+    "build": "rm -rf dist && mkdir dist && NODE_PATH=./src tsc"
   },
   "author": "Jon Eubank",
   "license": "GPL-3.0-or-later",
