--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "sqon",
+  "name": "sqon-builder",
   "version": "2.0.0",
   "description": "SQON creation and manipulation library.",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "rm -rf dist && mkdir dist && NODE_PATH=./src tsc"
   },
