--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "sqon-builder",
-  "version": "2.0.0",
-  "description": "SQON creation and manipulation library.",
+  "name": "@overture-stack/sqon-builder",
+  "version": "0.1.0",
+  "description": "SQON creation and manipulation library",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "rm -rf dist && mkdir dist && NODE_PATH=./src tsc"
   },
-  "author": "Jon Eubank",
-  "license": "GPL-3.0-or-later",
+  "author": "OICR",
+  "license": "AGPL-3.0-or-later",
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/joneubank/sqon.git"
+    "url": "git+https://github.com/overture-stack/sqon-builder.git"
   },
   "bugs": {
-    "url": "https://github.com/joneubank/sqon/issues"
+    "url": "https://github.com/overture-stack/sqon-builder/issues"
   },
-  "homepage": "https://github.com/joneubank/sqon#readme",
+  "homepage": "https://github.com/overture-stack/sqon-builder#readme",
   "keywords": [
     "overture",
     "arranger"
