--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,13 @@
   "compilerOptions": {
     "declaration": true,
     "lib": ["es2017"],
+    "module": "CommonJS",
     "noImplicitAny": true,
-    "removeComments": true,
-    "preserveConstEnums": true,
     "outDir": "./dist",
-    "sourceMap": true
+    "preserveConstEnums": true,
+    "removeComments": true,
+    "sourceMap": true,
+    "target": "es5"
   },
   "files": ["src/index.ts"]
 }
