--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@overture-stack/sqon-builder",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "description": "SQON creation and manipulation library",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rm -rf dist && mkdir dist && NODE_PATH=./src tsc"
+    "build": "rm -rf dist && mkdir dist && NODE_PATH=./src tsc",
+    "publish": "npm publish --access public"
   },
   "author": "OICR",
   "license": "AGPL-3.0-or-later",
