--- a/package.json
+++ b/package.json
@@ -1,32 +1,45 @@
 {
-  "name": "@overture-stack/sqon-builder",
-  "version": "0.1.0",
-  "description": "SQON creation and manipulation library",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "build": "rm -rf dist && mkdir dist && NODE_PATH=./src tsc"
-  },
-  "author": "OICR",
-  "license": "AGPL-3.0-or-later",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/overture-stack/sqon-builder.git"
-  },
-  "bugs": {
-    "url": "https://github.com/overture-stack/sqon-builder/issues"
-  },
-  "homepage": "https://github.com/overture-stack/sqon-builder#readme",
-  "keywords": [
-    "overture",
-    "arranger"
-  ],
-  "devDependencies": {
-    "typescript": "^4.9.5"
-  },
-  "prettier": {
-    "trailingComma": "all",
-    "singleQuote": true,
-    "arrowFunctionParentheses": "always"
-  }
+	"name": "@overture-stack/sqon-builder",
+	"version": "0.1.0",
+	"description": "SQON creation and manipulation library",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"scripts": {
+		"build": "rm -rf dist && mkdir dist && NODE_PATH=./src tsc",
+		"test": "nyc mocha"
+	},
+	"author": "OICR",
+	"license": "AGPL-3.0-or-later",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/overture-stack/sqon-builder.git"
+	},
+	"bugs": {
+		"url": "https://github.com/overture-stack/sqon-builder/issues"
+	},
+	"homepage": "https://github.com/overture-stack/sqon-builder#readme",
+	"keywords": [
+		"overture",
+		"arranger"
+	],
+	"devDependencies": {
+		"@types/chai": "^4.3.5",
+		"@types/mocha": "^10.0.1",
+		"chai": "^4.3.7",
+		"mocha": "^10.2.0",
+		"nyc": "^15.1.0",
+		"ts-node": "^10.9.1",
+		"typescript": "^5"
+	},
+	"prettier": {
+		"trailingComma": "all",
+		"singleQuote": true,
+		"arrowFunctionParentheses": "always",
+		"useTabs": true,
+		"printWidth": 120
+	},
+	"dependencies": {
+		"lodash.clonedeep": "^4.5.0",
+		"zod": "^3.21.4"
+	}
 }
