--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,12 @@
 {
-  "compilerOptions": {
-    "declaration": true,
-    "lib": ["es2017"],
-    "module": "CommonJS",
-    "noImplicitAny": true,
-    "outDir": "./dist",
-    "preserveConstEnums": true,
-    "removeComments": true,
-    "sourceMap": true,
-    "target": "es5"
-  },
-  "files": ["src/index.ts"]
+	"compilerOptions": {
+		"strict": true,
+		"lib": ["ESNext"],
+		"target": "es5",
+		"module": "CommonJS",
+		"outDir": "./dist",
+		"declaration": true,
+		"removeComments": true,
+		"sourceMap": true
+	}
 }
