--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
 		"build": "rm -rf dist && mkdir dist && NODE_PATH=./src tsc",
 		"test": "nyc mocha"
 	},
+	"files": [
+		"dist"
+	],
 	"author": "OICR",
 	"license": "AGPL-3.0-or-later",
 	"repository": {
