--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,7 @@
 		"declaration": true,
 		"removeComments": true,
 		"sourceMap": true
-	}
+	},
+	"include": ["src"],
+	"exclude": ["node_modules", "test"]
 }
