--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
 		"outDir": "./dist",
 		"declaration": true,
 		"removeComments": true,
-		"sourceMap": true
-	}
+		"sourceMap": true,
+		"rootDir": "src/"
+	},
+	"include": ["src/"]
 }
