--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
 	"description": "SQON creation and manipulation library",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
+	"files": [
+		"dist/"
+	],
 	"scripts": {
-		"build": "rm -rf dist && mkdir dist && NODE_PATH=./src tsc",
+		"build": "rm -rf dist && tsc",
 		"test": "nyc mocha"
 	},
 	"author": "OICR",
