--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
 	"name": "@overture-stack/sqon-builder",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"description": "SQON creation and manipulation library",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
+	"files": [
+		"dist/"
+	],
 	"scripts": {
-		"build": "rm -rf dist && mkdir dist && NODE_PATH=./src tsc",
+		"build": "rm -rf dist && tsc",
 		"test": "nyc mocha"
 	},
 	"author": "OICR",
